--- a/rule_5_iteration_4.html
+++ b/rule_5_iteration_4.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div>
-        <a href="Data_as_Material_1.html"> Next </a>
+        <a href="index.html"> Next </a>
     </div>
     <h1>Rule 5.4</h1>
     <h2>The New Colossus</h2>
